--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -44,4 +44,11 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_organizer_home">OrganizerHomeActivity</string>
+    <string name="add_profile">Add Profile</string>
+    <string name="profileimage">profileImage</string>
+    <string name="add_edit_picture">ADD/EDIT PICTURE</string>
+    <string name="phone">Phone</string>
+    <string name="email">Email</string>
+    <string name="confirm">CONFIRM</string>
+    <string name="homepage">Homepage</string>
 </resources>
