--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="email">Email</string>
     <string name="confirm">CONFIRM</string>
     <string name="homepage">Homepage</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
