--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="title_activity_organizer_home">OrganizerHomeActivity</string>
     <string name="add_profile">Add Profile</string>
     <string name="profileimage">profileImage</string>
-    <string name="add_edit_picture">ADD/EDIT PICTURE</string>
+    <string name="add_picture">ADD PICTURE</string>
     <string name="phone">Phone</string>
     <string name="email">Email</string>
     <string name="confirm">CONFIRM</string>
