--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="add_profile">Add Profile</string>
     <string name="profileimage">profileImage</string>
     <string name="add_picture">ADD PICTURE</string>
-    <string name="phone">Phone</string>
+    <string name="phone">Phone (Must be 10-digit number)</string>
     <string name="email">Email</string>
     <string name="confirm">CONFIRM</string>
     <string name="homepage">Homepage</string>
